<resources>
    <string name="app_name">支教</string>

    <!--hint-->
    <string name="hint_password">密码</string>
    <string name="hint_username">用户名</string>
    <string name="hint_register">注册点击这里</string>
    <string name="hint_name">姓名</string>
    <string name="hint_age">年龄</string>

    <!--user information-->
    <string name="ui_student_login">学生</string>
    <string name="ui_professor_login">教师</string>
    <string name="ui_login">登录</string>
    <string name="ui_register">注册</string>
    <string name="ui_password">密码</string>
    <string name="ui_username">用户名</string>
    <string name="ui_name">姓名</string>
    <string name="ui_age">年龄</string>
</resources>
